@@ -37,11 +37,9 @@ SET (CMAKE_BUILD_TYPE debug)
 ## Version
 
 file (READ ../VERSION _OPENVASLIBBASE_VERSION)
-STRING (REPLACE "
-" "" OPENVASLIBBASE_VERSION ${_OPENVASLIBBASE_VERSION})
 
-string (REGEX REPLACE "\\\n" "." _OPENVASLIBBASE_VERSION_TMP ${_OPENVASLIBBASE_VERSION})
-string (REGEX REPLACE "\\." ";" OPENVASLIBBASE_VERSION ${_OPENVASLIBBASE_VERSION_TMP})
+string (REGEX REPLACE "\\\n" "." _OPENVASLIBBASE_VERSION_STR ${_OPENVASLIBBASE_VERSION})
+string (REGEX REPLACE "\\." ";" OPENVASLIBBASE_VERSION ${_OPENVASLIBBASE_VERSION_STR})
 
 list(GET OPENVASLIBBASE_VERSION 0 OPENVASLIBBASE_MAJOR)
 list(GET OPENVASLIBBASE_VERSION 1 OPENVASLIBBASE_MINOR)
