@@ -37,11 +37,9 @@ SET (CMAKE_BUILD_TYPE debug)
 ## Version
 
 file (READ ../VERSION _OPENVASLIBOMP_VERSION)
-STRING (REPLACE "
-" "" OPENVASLIBOMP_VERSION ${_OPENVASLIBOMP_VERSION})
 
-string (REGEX REPLACE "\\\n" "." _OPENVASLIBOMP_VERSION_TMP ${_OPENVASLIBOMP_VERSION})
-string (REGEX REPLACE "\\." ";" OPENVASLIBOMP_VERSION ${_OPENVASLIBOMP_VERSION_TMP})
+string (REGEX REPLACE "\\\n" "." _OPENVASLIBOMP_VERSION_STR ${_OPENVASLIBOMP_VERSION})
+string (REGEX REPLACE "\\." ";" OPENVASLIBOMP_VERSION ${_OPENVASLIBOMP_VERSION_STR})
 
 list(GET OPENVASLIBOMP_VERSION 0 OPENVASLIBOMP_MAJOR)
 list(GET OPENVASLIBOMP_VERSION 1 OPENVASLIBOMP_MINOR)
