@@ -1,3 +1,10 @@
+2010-03-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	Patch contributed by Mareike Piechowiak <noplant@gmx.de>:
+
+	* base/CMakeLists.txt, omp/CMakeLists.txt: Fix handling
+	of dynamic VERSION handling.
+
 2010-03-16  Felix Wolfsteller <felix.wolfsteller@intevation.de>
 
 	Improved remote authentication (ldap), changed config file format.
